Thumbnails Basic Styling; Thumbnails JS Active State

--- a/index.html
+++ b/index.html
@@ -22,8 +22,14 @@
                 <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
                     <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
                 </a>
-                <a href="https://images.unsplash.com/photo-1438368915865-a852ef86fc42?q=80&fm=jpg&w=1080&fit=max&s=39b6964575874a20aeab2059d3b5e2e4" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="https://images.unsplash.com/photo-1438368915865-a852ef86fc42?q=80&fm=jpg&w=1080&fit=max&s=39b6964575874a20aeab2059d3b5e2e4" data-w="1000" data-h="1600" class="demo-gallery__img--main">
                     <img src="https://images.unsplash.com/photo-1438368915865-a852ef86fc42?q=80&fm=jpg&w=1080&fit=max&s=39b6964575874a20aeab2059d3b5e2e4" alt="" />
+                </a>
+                <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
+                </a>
+                <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
                 </a>
                 <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
                     <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
@@ -67,7 +73,10 @@
                     </div>
                 </div>
             </div>
-            <div class="pswp__thumbs"></div>
+            <div class="pswp__thumbs">
+                <div class="pswp__thumbs-list">
+                </div>
+            </div>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
