Markup and styling demo gallery. Styling variables for thumbs.

--- a/index.html
+++ b/index.html
@@ -15,24 +15,58 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <link rel="stylesheet" href="dist/css/app.css" type="text/css">
+        <link rel="stylesheet" href="dist/css/demo.css" type="text/css">
     </head>
     <body>
         <div class="page-content">
             <div id="test-gallery" class="gallery pswp-addon">
-                <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
-                    <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
+                <a href="demo/pics/image_01.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_01.jpg" alt="" />
                 </a>
-                <a href="https://images.unsplash.com/photo-1438368915865-a852ef86fc42?q=80&fm=jpg&w=1080&fit=max&s=39b6964575874a20aeab2059d3b5e2e4" data-w="1000" data-h="1600" class="demo-gallery__img--main">
-                    <img src="https://images.unsplash.com/photo-1438368915865-a852ef86fc42?q=80&fm=jpg&w=1080&fit=max&s=39b6964575874a20aeab2059d3b5e2e4" alt="" />
+                <a href="demo/pics/image_02.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_02.jpg" alt="" />
                 </a>
-                <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
-                    <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
+                <a href="demo/pics/image_03.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_03.jpg" alt="" />
                 </a>
-                <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
-                    <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
+                <a href="demo/pics/image_04.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_04.jpg" alt="" />
                 </a>
-                <a href="https://farm4.staticflickr.com/3894/15008518202_c265dfa55f_h.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
-                    <img src="https://farm4.staticflickr.com/3894/15008518202_b016d7d289_m.jpg" alt="" />
+                <a href="demo/pics/image_05.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_05.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_06.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_06.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_07.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_07.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_08.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_08.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_09.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_09.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_10.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_10.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_11.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_11.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_12.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_12.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_13.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_13.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_14.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_14.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_15.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_15.jpg" alt="" />
+                </a>
+                <a href="demo/pics/image_16.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                    <img src="demo/pics/image_16.jpg" alt="" />
                 </a>
             </div>
         </div>
