Styling variables settings added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <body>
         <div class="page-content">
             <div id="test-gallery" class="gallery pswp-addon">
-                <a href="demo/pics/image_01.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_01.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main" data-author="me">
                     <img src="demo/pics/image_01.jpg" alt="" />
                 </a>
                 <a href="demo/pics/image_02.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
