thumnail options extended, thumbnail styling, zoom animation switch

--- a/index.html
+++ b/index.html
@@ -20,52 +20,52 @@
     <body>
         <div class="page-content">
             <div id="test-gallery" class="gallery pswp-addon">
-                <a href="demo/pics/image_01.jpg" title="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua." data-w="1600" data-h="1600" class="demo-gallery__img--main" data-author="me">
-                    <img src="demo/pics/image_01.jpg" alt="" />
+                <a href="demo/pics/image_01.jpg" title="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua." data-w="1280" data-h="854" class="demo-gallery__img--main" data-author="me">
+                    <img itemprop="thumbnail" src="demo/pics/image_01.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_02.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_02.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_02.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_03.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_03.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_03.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_04.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_04.jpg" data-w="854" data-h="1280" class="demo-gallery__img--main">
                     <img src="demo/pics/image_04.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_05.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_05.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_05.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_06.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_06.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_06.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_07.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_07.jpg" data-w="854" data-h="1280" class="demo-gallery__img--main">
                     <img src="demo/pics/image_07.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_08.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_08.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_08.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_09.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_09.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_09.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_10.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_10.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_10.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_11.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_11.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_11.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_12.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_12.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_12.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_13.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_13.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_13.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_14.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_14.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_14.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_15.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_15.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_15.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_16.jpg" data-w="1600" data-h="1600" class="demo-gallery__img--main">
+                <a href="demo/pics/image_16.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_16.jpg" alt="" />
                 </a>
             </div>
@@ -126,6 +126,7 @@
                         wrap: '.pswp-addon',
                         item: 'a',
                         pswp_settings: {
+                            bgOpacity: 0.9,
                             index: $(this).index()
                         }
                     });
