--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="robots" content="index, follow" />
         <meta name="author" content="Dominik Laube &amp; Chris Heinrich" />
-        <meta name="description" content="" />
+        <meta name="description" content="Photoswipe Addon brings thumbnails functionality for the Photoswipe Core Plugin" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <link rel="stylesheet" href="dist/css/app.css" type="text/css">
-        <link rel="stylesheet" href="dist/css/demo.css" type="text/css">
+        <link rel="stylesheet" href="dist/css/demo_gallery.css" type="text/css">
     </head>
     <body>
         <div class="page-content">
