thumbs opening animation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<!--[if IE 9]><html lang="<?php echo $mnemonic; ?>" class="lt-ie10"><![endif]-->
-<!--[if gt IE 9]><!--><html lang="<?php echo $mnemonic; ?>"><!--<![endif]-->
+<!--[if IE 9]><html lang="de" class="lt-ie10"><![endif]-->
+<!--[if gt IE 9]><!--><html lang="de"><!--<![endif]-->
     <head>
         <meta charset="utf-8">
 
