css bugfixes and bower.json refactored

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-        <link rel="stylesheet" href="dist/css/app.css" type="text/css">
-        <link rel="stylesheet" href="dist/css/demo_gallery.css" type="text/css">
+        <link rel="stylesheet" href="dist/css/demo.css" type="text/css">
     </head>
     <body>
         <div class="page-content">
@@ -117,6 +116,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.0/photoswipe.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/photoswipe/4.1.0/photoswipe-ui-default.js"></script>
         <script src="src/js/photoswipe-addon.js"></script>
+
         <script>
             $(function () {
                 $('.gallery > a').on('click', function (e) {
@@ -135,5 +135,6 @@
                 });
             });
         </script>
+
     </body>
 </html>
