youtube video embed

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <a href="demo/pics/image_01.jpg" title="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua." data-w="1280" data-h="854" class="demo-gallery__img--main" data-author="me">
                     <img itemprop="thumbnail" src="demo/pics/image_01.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_02.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_02.jpg" alt="" />
+                <a href="https://www.youtube.com/watch?v=RI5fAaWPUfM" data-w="1024" data-h="691" class="demo-gallery__img--main">
+                    <img src="http://img.youtube.com/vi/RI5fAaWPUfM/0.jpg" alt="" />
                 </a>
                 <a href="demo/pics/image_03.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
                     <img src="demo/pics/image_03.jpg" alt="" />
