--- a/index.html
+++ b/index.html
@@ -19,53 +19,53 @@
     <body>
         <div class="page-content">
             <div id="test-gallery" class="gallery pswp-addon">
-                <a href="demo/pics/image_01.jpg" title="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua." data-w="1280" data-h="854" class="demo-gallery__img--main" data-author="me">
-                    <img itemprop="thumbnail" src="demo/pics/image_01.jpg" alt="" />
+                <a href="https://source.unsplash.com/hiAdjnXZxl8/1280x854" title="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua." data-w="1280" data-h="854" class="demo-gallery__img--main" data-author="me">
+                    <img itemprop="thumbnail" src="https://source.unsplash.com/hiAdjnXZxl8/400x270" alt="" />
                 </a>
                 <a href="http://img.youtube.com/vi/RI5fAaWPUfM/0.jpg" data-w="1280" data-h="854" data-url="https://www.youtube.com/watch?v=RI5fAaWPUfM" class="demo-gallery__img--main">
                     <img src="http://img.youtube.com/vi/RI5fAaWPUfM/0.jpg" alt="" />
                 </a>
-                <a href="demo/pics/image_03.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_03.jpg" alt="" />
+                <a href="https://source.unsplash.com/ssrbaKvxaos/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/ssrbaKvxaos/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_04.jpg" data-w="854" data-h="1280" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_04.jpg" alt="" />
+                <a href="https://source.unsplash.com/6hgsktgpfIE/854x1280" data-w="854" data-h="1280" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/6hgsktgpfIE/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_05.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_05.jpg" alt="" />
+                <a href="https://source.unsplash.com/QmemudqzrXQ/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/QmemudqzrXQ/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_06.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_06.jpg" alt="" />
+                <a href="https://source.unsplash.com/8jqna7aA-vs/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/8jqna7aA-vs/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_07.jpg" data-w="854" data-h="1280" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_07.jpg" alt="" />
+                <a href="https://source.unsplash.com/omKdUQ9R3Zo/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/omKdUQ9R3Zo/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_08.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_08.jpg" alt="" />
+                <a href="https://source.unsplash.com/HALe2SmkWAI/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/HALe2SmkWAI/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_09.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_09.jpg" alt="" />
+                <a href="https://source.unsplash.com/Pn6iimgM-wo/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/Pn6iimgM-wo/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_10.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_10.jpg" alt="" />
+                <a href="https://source.unsplash.com/ZMcLVBi9xx4/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/ZMcLVBi9xx4/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_11.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_11.jpg" alt="" />
+                <a href="https://source.unsplash.com/jLwVAUtLOAQ/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/jLwVAUtLOAQ/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_12.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_12.jpg" alt="" />
+                <a href="https://source.unsplash.com/FhHGPO3aMsU/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/FhHGPO3aMsU/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_13.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_13.jpg" alt="" />
+                <a href="https://source.unsplash.com/utqJcneoFjo/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/utqJcneoFjo/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_14.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_14.jpg" alt="" />
+                <a href="https://source.unsplash.com/xorjaMB8W70/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/xorjaMB8W70/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_15.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_15.jpg" alt="" />
+                <a href="https://source.unsplash.com/Sfn8f32ZIj0/1280x854" data-w="1280" data-h="854" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/Sfn8f32ZIj0/400x270" alt="" />
                 </a>
-                <a href="demo/pics/image_16.jpg" data-w="1280" data-h="854" class="demo-gallery__img--main">
-                    <img src="demo/pics/image_16.jpg" alt="" />
+                <a href="https://source.unsplash.com/SPd9CSoWCkY/854x1280" data-w="854" data-h="1280" class="demo-gallery__img--main">
+                    <img src="https://source.unsplash.com/SPd9CSoWCkY/400x270" alt="" />
                 </a>
             </div>
         </div>
